feat: add Inter font import and apply it to body for improved typography

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import "tailwindcss";
 @import "tw-animate-css";
+
 
 @custom-variant dark (&:is(.dark *));
 
@@ -90,6 +92,8 @@ body{
 }
 
 :root {
+
+    --font-inter: "Inter", sans-serif;
 
     --radius: 0.625rem;
 
@@ -230,6 +234,7 @@ body{
     }
   body {
     @apply bg-background text-foreground;
+    font-family: var(--font-inter);
 
     }
 
