--- a/app/globals.css
+++ b/app/globals.css
@@ -230,12 +230,12 @@ body{
 @layer base {
   * {
     @apply border-border outline-ring/50;
-
-    }
+  }
+  html {
+    font-family: var(--font-inter);
+  }
   body {
     @apply bg-background text-foreground;
     font-family: var(--font-inter);
-
-    }
-
+  }
 }
